Update NFO Scanner to remove old code. Warning: There may be some processing errors as a result of this!